# feadme

./: .coveragerc  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
docs/: conf.py  index.rst
examples/: README.md
notebooks/: Create AGN Templates.ipynb  Create Templates.ipynb  Generate Test Data.ipynb  LSQ Pre-Run.ipynb  Mock Disk.ipynb  Playground.ipynb  Plot DPE Spectra.ipynb  Process AT2020zso.ipynb  Speed Test Disk Evaluation.ipynb  TDE View Spectra.ipynb  Tabulate Results.ipynb  View Parsed Spectra.ipynb
scripts/: run.py
src/feadme/: __init__.py  cli.py  compose.py  integrators.py  parameterizers.py  parser.py  plotting.py  samplers.py  skeleton.py  utils.py
src/feadme/models/: disk.py  hung.py  hung_model.py  lsq.py
src/feadme/samplers/: __init__.py  base_sampler.py  nuts_sampler.py  svi_sampler.py
tests/: conftest.py  test_parser.py  test_skeleton.py
